added with miniconda environment

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,9 @@
     {%block title%}{%endblock%}
     <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet"  href="../static/css/lightbox.css">
+  <link rel="stylesheet"  href="../static/css/bootstrap-submenu.min.css">
+  <link rel="stylesheet"  href="../static/css/bootstrap-submenu.min.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -25,11 +28,21 @@
     <![endif]-->
   </head>
   <body>
+  
     {% block main %}{% endblock %}
-    
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="../static/js/lightbox.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="../static/js/bootstrap-submenu.min.js"></script>
+<script src="../static/js/bootstrap-submenu.js"></script>
+<script>
+  $(document).ready(function(){
+     $('[data-submenu]').submenupicker();
+  });
+</script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
   
      
