--- a/templates/base.html
+++ b/templates/base.html
@@ -27,9 +27,9 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body style="margin:0;padding:0;position:relative; background-color:blue">
   
-    {% block main %}{% endblock %}
+  {% block main %}{% endblock %}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -38,13 +38,7 @@
      <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="../static/js/bootstrap-submenu.min.js"></script>
 <script src="../static/js/bootstrap-submenu.js"></script>
-<script>
-  $(document).ready(function(){
-     $('[data-submenu]').submenupicker();
-  });
-</script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-  
+
      
 
   </body>
