--- a/templates/show.html
+++ b/templates/show.html
@@ -37,7 +37,7 @@
             
             </li>
             <li ><a href="#">Contact Us</a>
-              <li ><a href="#">Log In</a>
+              <li ><a href="/register">Register</a>
         </li>
            
               </ul>
