--- a/templates/contact_form.html
+++ b/templates/contact_form.html
@@ -4,19 +4,20 @@
 </head>
 <body>
     <h1>Contact us</h1>
-
+    <h2>{{message}}</h2>
     {% if form.errors %}
         <p style="color: red;">
             Please correct the error{{ form.errors|pluralize }} below.
         </p>
     {% endif %}
 
-    <form action="" method="post">
+    <form action="{% url 'register' %} " method="post">
         <table>
             {{ form.as_table }}
         </table>
         {% csrf_token %}
-        <input type="submit" value="Submit">
+        
+        <input type="submit" name="submit" value="Submit">
     </form>
 </body>
 
