some changes in show.html

--- a/templates/show.html
+++ b/templates/show.html
@@ -36,7 +36,7 @@
             </ul>
             
             </li>
-            <li ><a href="#">Contact Us</a>
+            <li ><a href="/contactus">Contact Us</a>
               <li ><a href="/register">Register</a>
         </li>
            
@@ -175,7 +175,7 @@ h3{
 
       
     <div class="container"> 
-    <h1>List of Products</h1>
+    <h1>List of Product</h1>
 <div class="row">
 
 
